ingressroute-patch.yaml
# openhab.git: kustomize/production/ingressroute-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openhab
spec:
  routes:
    - kind: Rule
      match: "Host(`oh.moerman.online`)"
      services:
        - kind: Service
          name: openhab
          port: 80
  tls: {}
