ingressroute.yaml
# openhab.git:kustomize/production/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openhab
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  routes:
    - match: "Host(`oh.moerman.online`)"
      kind: Rule
      # services:
      #   - name: openhab
      #     port: 80
